bk_ida/gccida/c0/set_page_table_entry
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/ggc-page.c:907:38: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
void  set_page_table_entry( void *p, page_entry_0 *entry) 
                                     ^~~~~~~~~~~~
                                     page_entry
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/ggc-page.c:910:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 ***base; // [rsp+18h] [rbp-18h] 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/ggc-page.c:915:36: error: expected expression
base[BYTE3( p)] = ( page_entry_0 **)xcalloc( 1LL << ( 24 - LOBYTE( G.lg_pagesize)), 8uLL); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/ggc-page.c:915:21: error: use of undeclared identifier 'page_entry_0'
base[BYTE3( p)] = ( page_entry_0 **)xcalloc( 1LL << ( 24 - LOBYTE( G.lg_pagesize)), 8uLL); 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_page_table_entry/src/obj/ggc-page.o] Error 1
